Terceiro Commit. Mais simplificado e funcional.